css/mediaqueries.css
@media screen and (max-width: 800px) {

  /*-----body-----*/

    html{
      width: 100%;
      height: 100%;
    }

    body {
      background-image: url("../images/about/superior2.jpg");
    }

    .page {
      margin-left: -8px;
      padding-top: 130px;
    }

  /*-----index-----*/

    header {
      width: 100%;
      height: 110px;
      margin-top: 10px;
    }

    #header {
      top: 10%;
      text-align: center;
      padding-right: 0;

    }

    #name {
      font-size: 250%;
    }

    header ul {
      margin: 0 auto;
      padding: 0;
    }

    header li {
      font-size: 90%;
      margin-right: auto;
      padding: 0 10px;
    }

  /*-----home view-----*/

    #mainQuote {
      font-size: 100%;
      position: static;
      margin: 50px auto;
      width: 280px;
    }

  /*-----about view-----*/

    #leaves {
      position: static;
      margin: 0 auto;
      width: 85%;
      height: 92%;
      font-size: 90%;
      left: auto;
      color: #EEEEF5;
      margin-bottom: 10px;
    }

    #aboutImage1 {
      height: 200px;
      visibility: visible;
    }

    #aboutImage2 {
      visibility: hidden;
      height: 0px;
    }

    /*#leaves::-webkit-scrollbar-thumb {
      background-image: -webkit-gradient(linear,
                        left top,
                        left bottom,
                        color-stop(0.20, #af898d),
                        color-stop(0.45, rgb(174, 180, 191)),
                        color-stop(0.85, #074e59));*/

  /*-----portfolio view-----*/

    #portfolioHead {
      margin-top: 0px;
      width: 90%;
      text-align: center;
      margin: 0 auto;
      font-size: 120%;
      color: #A13E54;
    }

    #portfolioLinks {
      margin-top: 20px;
      width: auto;
      overflow-x: auto;
      height: 270px;
      overflow-y: hidden;
      white-space: nowrap;
      -webkit-overflow-scrolling: touch;
      -ms-overflow-style: none;
    }

    figure {
      width: 150px;
      color: #e8f9d9;
      overflow: hidden;
    }

    figcaption {
      font-size: 90%;
      font-weight: bold;
    }

    figure p {
      margin-top: 5px;
      font-size: 80%;
      white-space: normal;
    }

    figure img {
      max-width: 130px;
      box-shadow: 0 0 20px black;
    }

    figure p {
      background-color: transparent;
    }

    #hideThis {
      color: #074e59;
      margin-top: 50px;
      visibility: visible;
      height: auto;
    }

  /*-----resume view-----*/

    #resume {
      text-align: center;
    }

    #resume a img {
      margin: 0 auto;
    }

  /*-----contact view-----*/

    #contactNav img {
      width: 30px;
      margin: 15px;
    }

    #email {
      font-size: 130%;
      color: #A13E54;
    }

